don't confuse users, just report modified on disk

unlink and rename will trigger this

BUG: 504151